# wimsalabim

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PYPI_README.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecard.yml
docs/: PENTEST_REPORT.md  architecture.md  legal.md
examples/: README.md  github-action.yml  owned-domains.txt  sample-report-signed.json  sample-report.json
src/wimsalabim/: __init__.py  __main__.py  cli.py  display.py
src/wimsalabim/analyzers/: __init__.py  base.py  cloud.py  cookies.py  cors.py  cve_lookup.py  directories.py  dns_recon.py  email_sec.py  graphql.py  headers.py  http2.py  js_analyzer.py  leak_detector.py  network.py  performance.py  ports.py  scoring.py  security_txt.py  sitemap.py  subdomain_takeover.py  subdomains.py  tech.py  tls.py  waf.py  whois_lookup.py
src/wimsalabim/core/: __init__.py  authorization.py  canonical.py  crypto.py  exceptions.py  http_client.py  logging.py  orchestrator.py  privacy.py  registry.py  schema.py  timestamps.py
src/wimsalabim/display/: __init__.py  markdown.py  rich_renderer.py  sarif.py
src/wimsalabim/ml/: __init__.py  anomaly.py  risk_engine.py  threat_classifier.py  traffic_analyzer.py  vulnerability_predictor.py
src/wimsalabim/risk/: __init__.py  heuristic.py  rules.py
src/wimsalabim/watch/: __init__.py  baseline.py  loop.py
tests/: _tls_helpers.py  conftest.py  test_analyzer_dns.py  test_analyzer_headers.py  test_analyzer_ports.py  test_analyzer_tls.py  test_analyzers.py  test_authorization.py  test_baseline.py  test_canonical.py  test_cli.py  test_crypto.py  test_display.py  test_exceptions.py  test_http_client.py  test_logging.py  test_ml.py  test_no_telemetry.py  test_orchestrator.py  test_privacy.py  test_registry.py  test_risk.py  test_schema.py  test_timestamps.py  test_watch_loop.py
