[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "wimsalabim"
version = "0.2.0"
description = "Eerlijke website-security en privacy-reconnaissance — onder PVNL-vlag"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
authors = [{ name = "Captain WimLee115" }]
keywords = [
    "security", "reconnaissance", "osint", "privacy", "pvnl",
    "tls", "headers", "dns", "scanner", "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Networking :: Monitoring",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1",
    "rich>=13.7",
    "httpx[http2]>=0.27",
    "pydantic>=2.6",
    "structlog>=24.1",
    "tenacity>=8.2",
    "dnspython>=2.6",
    "python-whois>=0.9",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-requests",
]

[project.scripts]
wimsalabim = "wimsalabim.cli:main"

[project.urls]
Homepage = "https://github.com/WimLee115/wimsalabim"
Repository = "https://github.com/WimLee115/wimsalabim"
Issues = "https://github.com/WimLee115/wimsalabim/issues"
PVNL = "https://github.com/WimLee115/Privacy-VerzetNL"

[tool.hatch.build.targets.wheel]
packages = ["src/wimsalabim"]

# ── Pytest ──────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers --strict-config --cov=wimsalabim --cov-report=term-missing"
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:dns.*",
    "ignore::DeprecationWarning:whois.*",
]

# ── Ruff ────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "N",             # pep8-naming
    "UP",            # pyupgrade
    "B",             # bugbear
    "C4",            # comprehensions
    "SIM",           # simplify
    "RUF",           # ruff-specific
    "ASYNC",         # async-specific
    "TRY",           # tryceratops (error-handling smells)
    "PTH",           # use pathlib
    "PL",            # pylint subset
]
ignore = [
    "PLR0913",  # too-many-arguments — analyzers krijgen veel context
    "TRY003",   # long messages in exceptions are fine
    "N818",     # we volgen Python's eigen patroon (KeyboardInterrupt, StopIteration)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101", "PLC0415"]

# ── Mypy ────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
disallow_any_generics = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["whois.*", "dns.*"]
ignore_missing_imports = true

# ── Coverage ────────────────────────────────────────────────────────────
[tool.coverage.run]
branch = true
source = ["src/wimsalabim"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == \"__main__\":",
]
show_missing = true
fail_under = 70
